--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
+    "redux": "^5.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
